<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moments720x1080x2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/hi"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/spinner_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="269dp"
        android:layout_height="32dp"
        android:layout_marginTop="35dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChoice" />

    <Spinner
        android:id="@+id/spinnerPrice"
        android:layout_width="269dp"
        android:layout_height="32dp"
        android:layout_marginTop="25dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerColor" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="122dp"
        android:layout_height="39dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/custom_button"
        android:text="@string/ok"
        android:textColor="@color/colorOlive"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/spinnerPrice"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPrice" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="130dp"
        android:layout_height="37dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/custom_button"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/colorOlive"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerPrice"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPrice" />

    <TextView
        android:id="@+id/textResultColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nothing_selected_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOk" />

    <TextView
        android:id="@+id/textResultPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nothing_selected_price"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOk" />

</androidx.constraintlayout.widget.ConstraintLayout>